# digital-agenda

./: .coveragerc  .dockerignore  .env.develop.example  .env.example  .env.test  .gitignore  README.md  docker-compose.override.example.yml  docker-compose.override.local-build.yml  docker-compose.override.test.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: backend-lint.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  docker-build.yml  frontend-lint.yml  lint-backend.yml  lint-frontend.yml  lint.yml  tests.yml
config/: host-example.nginx.conf
digital_agenda/: __init__.py  celery_config.py
digital_agenda/apps/accounts/: admin.py  apps.py  conftest.py  forms.py  jobs.py  models.py  views.py
digital_agenda/apps/charts/: admin.py  apps.py  models.py  routers.py  serializers.py  urls.py  views.py
digital_agenda/apps/core/: admin.py  apps.py  cache.py  formats.py  jobs.py  middleware.py  models.py  resources.py  routers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
digital_agenda/apps/estat/: admin.py  apps.py  bulk.py  estat_import.py  importer.py  jobs.py  json_stat.py  models.py  tasks.py
digital_agenda/apps/shortner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
digital_agenda/common/: admin.py  citext.py  exceptions.py  export.py  job.py  models.py  renderers.py  scheduler.py  serializers.py  test_utils.py  utils.py  viewset.py
digital_agenda/settings/: base.py  test.py  utils.py
digital_agenda/site/: admin.py  asgi.py  urls.py  wsgi.py
docker/: app.docker  base.docker  build.docker  build.sh  docker-compose.yml  docker.env  entrypoint.sh  nginx.conf  nginx.docker  wait_for_services.sh
docker/nginx-templates/: default.nginx.conf.template
docs/: adding_new_chart.md  architecture_structurizr.dsl  development_guide.md  import.md  install_develop.md  install_docker.md  local_docker_build.md  maintenance.md  nuts.md  setup_host_ubuntu.md  tests.md  todo.md
examples/: educ_uoe_grad03.json  educ_uoe_grad03.sql  ent2_after_2009.sql  ent2_enabled.json  import_educ_uoe_grad03.sh  import_ent2_bulk_data.sh  import_ent2_bulk_meta.sh
fixtures/: breakdown.json  breakdownchartoption.json  breakdowngroup.json  breakdowngrouplink.json  chart.json  chartfilterorder.json  chartfontstyle.json  chartgroup.json  country.json  countryprofileindicator.json  datasource.json  extrachartnote.json  geogroup.json  importconfig.json  importconfigtag.json  indicator.json  indicatordatasourcelink.json  indicatorgroup.json  indicatorgrouplink.json  period.json  staticpage.json  unit.json
fixtures/test/: breakdown-chart-options.json  chart.json  chartfilterorder.json  chartfontstyle.json  chartgroup.json  country-profile-facts.json  data_merge_importconfig.json  desi-extra-notes-facts.json  digital-trajectory-facts.json  extra-chart-notes.json  facts.json  formula_importconfig.json  geogroup.json  indicatormetadata.json  seed_importconfigs.json  users.json
fixtures/test_betamax/: TestCheckUpdates.test_no_update.json  TestCheckUpdates.test_update_data_last_update.json  TestCheckUpdates.test_update_datastructure_last_update.json  TestCheckUpdates.test_update_version.json  TestImporter.test_adjust_value.json  TestImporter.test_delete_existing.json  TestImporter.test_download.json  TestImporter.test_download_invalidate_cache.json  TestImporter.test_keep_existing.json  TestImporter.test_surrogate_indicator.json  TestImporter.test_update_existing.json  TestImporterDataMerge.test_avg_values.json  TestImporterDataMerge.test_avg_values_multipliers.json  TestImporterDataMerge.test_merge_flags.json  TestImporterDataMerge.test_missing_value_avg.json  TestImporterDataMerge.test_missing_value_multiplier.json  TestImporterDataMerge.test_missing_value_sum.json  TestImporterDataMerge.test_raise_error.json  TestImporterDataMerge.test_sum_values.json  TestImporterDataMerge.test_sum_values_with_multipliers.json  TestImporterDryRun.test_create.json  TestImporterDryRun.test_verify_delete.json  TestImporterDryRun.test_verify_no_change.json  TestImporterDryRun.test_verify_no_import_config.json  TestImporterDryRun.test_verify_update_flags.json  TestImporterDryRun.test_verify_update_value.json  TestImporterErrors.test_duplicate_observations.json  TestImporterErrors.test_invalid_dimension_indicator.json  TestImporterErrors.test_invalid_filter_key.json  TestImporterErrors.test_invalid_filter_value.json  TestImporterErrors.test_invalid_formula.json  TestImporterErrors.test_invalid_mapping_value.json  TestImporterErrors.test_invalid_multiplier_key.json  TestImporterErrors.test_invalid_multiplier_value.json  TestImporterErrors.test_invalid_multiplier_value_duplicate.json  TestImporterErrors.test_symbol_invalid_dimension.json  TestImporterErrors.test_symbol_invalid_dimension_value.json  TestImporterFormula.test_formula.json  TestImporterFormula.test_formula_ci_definitions.json  TestImporterFormula.test_formula_without_surrogates.json  (+9 more)
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  cypress.config.js  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.js  vite.config.mjs  vite.config.ts
frontend/cypress/: describeResponsive.js  tsconfig.json
frontend/cypress/e2e/: a11y.cy.js  chart.cy.js  indicators.cy.js  metadata.cy.js  navigation.cy.js  search.cy.js  static.cy.js
frontend/cypress/fixtures/: import_file_invalid.xlsx  import_file_invalid_duplicate.xlsx  import_file_valid.xls  import_file_valid.xlsx  import_file_valid_no_remarks.xlsx
frontend/cypress/support/: commands.ts  describeResponsive.js  e2e.ts  index.ts  randomStr.js
frontend/public/: browserconfig.xml  loading.css  site.webmanifest
frontend/src/: App.vue  initHighchart.js  main.js
frontend/src/components/: BackToTop.vue  (+9 more)
requirements/: base.txt  constraints.txt  dev.txt
scripts/: mk_breakdown_groups_fixture.py  mk_breakdowns_fixture.py  mk_data_sources_fixture.py  mk_indicator_groups_fixture.py  mk_indicators_fixture.py  mk_units_fixture.py
src/digital_agenda/: celery_config.py  version.py
(+446 files in other folders)
