[project]
name = "digital-agenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.*",
    "django-admin-autocomplete-filter>=0.7.1",
    "django-admin-env-notice>=1.0.1",
    "django-admin-sortable2>=2.3.1",
    "django-adminactions>=2.4",
    "django-cas-ng>=5.1.1",
    "django-ckeditor-5>=0.2.20",
    "django-colorfield>=0.14.0",
    "django-composite-field>=2.0.1",
    "django-constance>=4.3.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-hashid-field>=3.4.1",
    "django-health-check>=4.4.0",
    "django-import-export>=4.4.1",
    "django-json-widget>=2.1.1",
    "django-model-utils>=5.0.0",
    "django-more-admin-filters>=1.15",
    "django-redis>=6.0.0",
    "django-rq>=4.1.0",
    "django-task>=2.1.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-csv>=3.0.2",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-magic>=0.4.27",
    "requests>=2.34.0",
    "rich>=15.0.0",
    "rq-scheduler>=0.14.0",
    "sentry-sdk[django]>=2.59.0",
    "sympy>=1.14.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "betamax>=0.9.0",
    "click>=8.3.3",
    "coverage>=7.14.0",
    "django-debug-toolbar>=6.3.0",
    "django-request-logging>=0.7.5",
    "django-stubs>=6.0.4",
    "ipdb>=0.13.13",
    "ipython>=9.13.0",
    "ipython-autotime>=0.3.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-subtests>=0.15.0",
    "ruff>=0.15.12",
]

[tool.uv]
exclude-newer = "14 days"

[tool.ruff.lint]
select = [
    "E4", # pycodestyle
    "E7",
    "E9",
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "S", # flake8-bandit
    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "T20", # flake8-print
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "INT", # flake8-gettext
    # "PTH", # flake8-use-pathlib
    "NPY", # numpy rules
]
ignore = [
    # Allow boolean default positional arguments, as django has many of those.
    "FBT001",
    "FBT002",
    "FBT003",
    # Allow using "assert"
    "S101",
    # Allow using mark_safe
    "S308",
    # Allow NULL values for text fields, not the best practice but a pain to migrate
    "DJ001",
]

[tool.coverage.run]
omit = [
    "digital_agenda/settings/*",
    "*/tests/*",
    "*/management/*",
    "**/migrations/*",
]
relative_files = true

[tool.pytest.ini_options]
addopts = [
    "--ds=digital_agenda.settings.test",
    "--pdbcls=IPython.terminal.debugger:Pdb",
]
