[metadata]
name = digital_agenda
version = attr: digital_agenda.__version__

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find:
install_requires =
    Django
    Twisted[tls,http2]
    attrs
    celery
    channels
    daphne
    dj-rest-auth
    django-admin-autocomplete-filter
    django-admin-env-notice
    django-cors-headers
    django-filter
    django-health-check
    django-model-utils
    django-postgres-extra
    django-redis
    django-sql-dashboard
    djangorestframework
    djangorestframework-simplejwt
    drf-nested-routers
    drf-spectacular
    gunicorn
    httpx
    orjson
    pandas
    psycopg2-binary
    rich

[options.packages.find]
where=src
