[metadata]
name = digital_agenda
version = attr: digital_agenda.__version__
;version = 0.1.0

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:
install_requires =
    Django
    Twisted[tls,http2]
    attrs
    celery
    channels
    daphne
    dj-rest-auth
    django-admin-autocomplete-filter
    django-admin-env-notice
    django-admin-sortable2
    django-cors-headers
    django-filter
    django-health-check
    django_json_widget
    django-model-utils
    django-postgres-extra
    django-redis
    django-sql-dashboard
    djangorestframework
    djangorestframework-simplejwt
    drf-nested-routers
    drf-spectacular
    gunicorn
    httpx
    openpyxl
    orjson
    pandas
    psycopg2-binary
    python-magic
    rich
    xlrd

[options.packages.find]
where=src
